# watchrom

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  LICENSE  README.md  SECURITY.md  install.sh  launcher.py  main.py  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
core/: __init__.py  band_backends.py  interfaces.py  pipeline.py  registry.py  vendors.py
keys/: KEY_INDEX.txt
modules/: __init__.py  adb_cmds.py  analyze.py  apk.py  avb.py  backup.py  bootimg.py  chipset.py  chipsets.py  device.py  devtree.py  diag.py  dtb.py  keys.py  magisk.py  modem_bands.py  network.py  ota.py  partition.py  pipeline_cmd.py  props.py  qualcomm.py  qualcomm_chips.py  rk_aw_rtk.py  rom.py  root.py  samsung.py  sepolicy.py  sysimg.py  twrp.py  wearos.py
tests/: __init__.py  run_tests.py  test_bands.py  test_core.py
